<resources>
    <string name="app_name">TECFOOD</string>
    <string name="bienvenida">Bienvenido a TECFOOD</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="forgotPassword">¿Ya tienes una cuenta?</string>
    <string name="acept">He leido y acepto lo</string>
    <string name="terms">Terminos y condiciones</string>
    <string name="google">GOOGLE</string>

    <string name="terms1">Términos y condiciones de uso</string>
    <string name="terms2">Bienvenido a nuestro servicio de redes sociales. Estos términos de uso ("Términos") constituyen un acuerdo legal entre tú y nosotros con respecto al uso de nuestro servicio, incluyendo cualquier contenido, funcionalidad y servicios ofrecidos a través del mismo.Aceptación de los Términos: Al acceder o utilizar nuestro servicio, aceptas estar sujeto a estos Términos en su totalidad. Si no estás de acuerdo con alguno de estos términos, no uses nuestro servicio.Uso Aceptable: No debes utilizar nuestro servicio de ninguna manera que pueda causar daño, perjuicio o mal funcionamiento del mismo, o que pueda afectar de alguna manera la experiencia de otros usuarios. Esto incluye, pero no se limita a, la publicación de contenido ilegal, difamatorio, acosador o que viole los derechos de propiedad intelectual de terceros.Registro de Cuenta: Para acceder a ciertas características de nuestro servicio, es posible que necesites registrarte para obtener una cuenta. Al registrarte, aceptas proporcionar información precisa, actualizada y completa sobre ti mismo, y mantener la confidencialidad de tu contraseña</string>
    <string name="cerrarSession">Cerrar sesión</string>

    <string name="bar_title">Inicio</string>
    <string name="perfil">Mi perfil</string>
    <string name="orders">Mis ordenes</string>
    <string name="search">Buscar</string>

    <string name="start_menu">Inicio</string>
    <string name="record_menu">Historial</string>
    <string name="restart_menu">Restablecer ajustes</string>
    <string name="signOut_menu">Cerrar Sesión</string>
    <string name="SubMenuCuenta">Cuenta</string>

    <string name="navigation_drawer_close">Cerrar</string>
    <string name="user">user@user.com</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar_plato">Buscar Plato</string>
    <string name="signOut">Cerrar cesion</string>
    <string name="add">Agregar</string>
    <string name="car">Ver carrito</string>
    <string name="name_dish">nombre Palto</string>
    <string name="catgory">Catgory</string>
    <string name="price">Precio: $./ </string>
    <string name="iniciar_cesion">Iniciar cesion</string>
    <string name="nombres">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="acount_not">¿Aun no tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="total_price">Total: %s</string>
    <string name="sms_error">En mantenimiento.\nPor favor, inténtalo de nuevo en unos minutos.</string>
    <string name="pedir">Hacer orden</string>
    <string name="cantidad">Cantidad</string>
    <string name="history_dish">Historial de platos</string>
    <string name="pay_continue">Continuar pago</string>
</resources>