<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        android:background="@color/white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        >
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- Scaletype para ocupar espacio completo -->


        <ImageView
                android:id="@+id/ivDish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/nameDish"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tvDishApparence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotosemi"
                    android:text="@string/catgory"
                    android:layout_gravity="center"
                    android:textSize="25sp" />

            <TextView
                    android:id="@+id/tvDishName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotosemi"
                    android:text="@string/name_dish"
                    android:layout_gravity="center"
                    android:textSize="25sp" />

            <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                >
                <TextView
                        android:id="@+id/tvDishNamePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/robotosemi"
                        android:text="@string/price"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:layout_marginRight="9dp"
                        />

                <TextView
                        android:id="@+id/tvDishPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/buttonColor"
                        android:fontFamily="@font/robotosemi"
                        tools:text="8.00"
                        android:layout_gravity="center"
                        android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
        <!--<FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="button"
            android:background="@color/nameHero"
            >

            <TextView
                android:id="@+id/tvSuperheroAparence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apariecia"
                android:layout_gravity="center"
                android:textSize="30dp"
                />

        </FrameLayout>-->

    </FrameLayout>

</androidx.cardview.widget.CardView>
